# GPR5100_TurnBasedGame

./: CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  vcpkg.json
TurnBasedGame/: CMakeLists.txt
TurnBasedGame/include/: Client.hpp  GameState.hpp
TurnBasedGame/src/: Client.cpp  main.cpp
TurnBasedGameServer/: CMakeLists.txt
TurnBasedGameServer/include/: Server.hpp  ServerState.hpp
TurnBasedGameServer/src/: Server.cpp  main.cpp
common/include/: Consts.hpp  MorpionGrid.hpp  Packet.hpp
common/src/: MorpionGrid.cpp  Packet.cpp
